@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-11-20T16:13:24Z",
-  "count" : 11,
-  "count_minmax" : [ 10, 11 ],
-  "count_decinc" : [ -0, +11 ],
+  "timestamp" : "2023-11-21T00:47:37Z",
+  "count" : 12,
+  "count_minmax" : [ 10, 12 ],
+  "count_decinc" : [ -0, +12 ],
   "uniques" : 10,
   "uniques_minmax" : [ 9, 10 ],
   "uniques_decinc" : [ -0, +10 ]
