@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-11-20T16:13:24Z",
+  "timestamp" : "2023-11-21T00:47:37Z",
   "count_outdated" : 5698,
   "uniques_outdated" : 1910,
-  "count" : 5783,
+  "count" : 5784,
   "uniques" : 1972,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2023-11-20T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 10, 11 ],
-      "count_decinc": [ 0, 11 ],
+      "count": 12,
+      "count_minmax": [ 10, 12 ],
+      "count_decinc": [ 0, 12 ],
       "uniques": 10,
       "uniques_minmax": [ 9, 10 ],
       "uniques_decinc": [ 0, 10 ]
