@@ -1,3 +1,12 @@
+2023-11-21T00:47:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6937668007 # 2096
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-21
+* notice: last 14d: unq all: 51 86
+* notice: prev accum: outdated-unq outdated-all / unq all: 1910 5698 / 1972 5783
+* notice: next accum: outdated-unq outdated-all / unq all: 1910 5698 / 1972 5784
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +10 +12 -0 -0 / 10 12
+* notice: removed / changed dates: [] / [2023-11-20]
+
 2023-11-20T16:13:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6932785049 # 2095
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-20
